# rust_code_snippets

./: .gitignore  Cargo.toml  README.md
bytes/: Cargo.toml
bytes/src/: main.rs
c调用rust/: Cargo.toml
c调用rust/src/: lib.rs  main.c
hello_macro/: Cargo.toml
hello_macro/hello_macro_derive/: Cargo.toml
hello_macro/hello_macro_derive/src/: lib.rs
hello_macro/src/: lib.rs  main.rs
linked_list/: Cargo.toml
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
minigrep/tests/: search.rs
mytest/: Cargo.toml
mytest/src/: main.rs
rust-to-c/: Cargo.toml  build.rs
rust-to-c/src/: main.rs
rust_golang_ffi_demo/golang/: go.mod  main.go  mainc
rust_golang_ffi_demo/golang/cgo/: rustdemo.h
rust_golang_ffi_demo/golang/lib/: rustdemo.d  rustdemo.dll.exp  rustdemo.dll.lib  rustdemo.h
rust_golang_ffi_demo/rustdemo/: Cargo.toml
rust_golang_ffi_demo/rustdemo/src/: lib.rs
rust调用c/: Cargo.toml  build.rs
rust调用c/src/: main.rs  third.c
sayhello_lib/: Cargo.toml
sayhello_lib/src/: lib.rs
study_test/: Cargo.toml
study_test/benches/: my_benchmark.rs
study_test/src/: lib.rs
study_test/tests/: add_test.rs
timer_future/: Cargo.toml
timer_future/src/: lib.rs
unsafe_rust/: Cargo.toml
unsafe_rust/src/: main.rs
web服务器/单线程版本的_web_服务器/: Cargo.toml  hello.html
web服务器/单线程版本的_web_服务器/src/: main.rs
web服务器/实践多线程_web服务器/: 404.html  Cargo.toml
web服务器/实践多线程_web服务器/src/: lib.rs  main.rs
web服务器/异步_web服务器/: Cargo.toml
web服务器/异步_web服务器/src/: main.rs
web服务器/异步多线程_web服务器/: 404.html  Cargo.toml
web服务器/异步多线程_web服务器/src/: main.rs
world_hello/: Cargo.toml
world_hello/src/: main.rs
world_hello2/: Cargo.toml
world_hello2/src/: main.rs
其他/: Cargo.toml
其他/src/: error_handle.rs  format.rs  main.rs
基本数据类型/: Cargo.toml
基本数据类型/src/: main.rs
复合类型/: Cargo.toml
复合类型/src/: array.rs  collection.rs  enumeration.rs  main.rs  sort.rs  struct1.rs  tuple.rs
宏编程/: Cargo.toml
宏编程/src/: main.rs
实现一个简单的redis/hello-my-redis/: Cargo.toml
实现一个简单的redis/hello-my-redis/examples/: hello-redis.rs
实现一个简单的redis/hello-my-redis/src/: main.rs
实现一个简单的redis/mini_redis/: Cargo.toml
实现一个简单的redis/mini_redis/src/: main.rs
实现一个简单的redis/my-redis-stream/: Cargo.toml
实现一个简单的redis/my-redis-共享状态/: Cargo.toml
实现一个简单的redis/my-redis-共享状态/examples/: hello-redis.rs
实现一个简单的redis/tcp/: Cargo.toml
实现一个简单的redis/tokio_hello/: Cargo.toml
实现一个简单的redis/tokio_hello/examples/: main1.rs  main2.rs  main3.rs  main4.rs  main5.rs  main6.rs
实现一个简单的redis/tokio_hello/src/: main.rs
实现一个简单的redis/tokio_select/: Cargo.toml
实现一个简单的redis/tokio_select/src/: main.rs
实现一个简单的redis/tokio_stream/: Cargo.toml
实现一个简单的redis/tokio_stream/src/: main.rs
实现一个简单的redis/tokio_tcp/: Cargo.toml
实现一个简单的redis/tokio_优雅的关闭/: Cargo.toml
实现一个简单的redis/tokio_优雅的关闭/src/: main.rs
实现一个简单的redis/tokio_协作式调度/: Cargo.toml
实现一个简单的redis/tokio_协作式调度/examples/: example1.rs
实现一个简单的redis/tokio_协作式调度/src/: main.rs
实现一个简单的redis/tokio_异步原理/: Cargo.toml
实现一个简单的redis/tokio_异步原理/src/: main.rs
实现一个简单的redis/tokio_异步跟同步共存/: Cargo.toml
实现一个简单的redis/tokio_异步跟同步共存/src/: main.rs
实现一个简单的redis/异步跟同步共存/src/: main.rs  other.rs
并发编程/: Cargo.toml
并发编程/examples/: alternate.go  alternate1.rs  alternate2.rs  alternate3.rs  barrier.rs  deadlock.rs
并发编程/src/: config.rs  main.rs
异步编程/: Cargo.toml
异步编程/src/: main.rs
循环引用与自引用/: Cargo.toml
循环引用与自引用/src/: main.rs
所有权和借用/: Cargo.toml
所有权和借用/src/: main.rs  study.rs
文件操作/: .gitignore  Cargo.toml  hello.txt  lorem_ipsum.txt
文件操作/src/: main.rs
方法/src/: closure.rs  generic.rs  inheritance.rs  rust_type.rs  trait_study.rs
方法_泛型_特征/: Cargo.toml
方法_泛型_特征/src/: closure.rs  generic.rs  main.rs  operator_overloading.rs  polymorphism.rs  rust_type.rs  trait_study.rs
日志与监控/: Cargo.toml
日志与监控/examples/: main1.rs  main2.rs  main3.rs  main4.rs  main5.rs
智能指针/: Cargo.toml
智能指针/src/: cow.rs  main.rs
构建脚本/hello/: Cargo.toml  build.rs
构建脚本/hello/src/: main.rs
构建脚本/条件编译/: Cargo.toml  build.rs
构建脚本/链接系统库/: Cargo.toml  build.rs
构建脚本/链接系统库/src/: lib.rs
模式匹配/: Cargo.toml
模式匹配/src/: main.rs
流程控制/: Cargo.toml
流程控制/src/: main.rs
猜数游戏/: Cargo.toml
猜数游戏/src/: main.rs
生命周期/: Cargo.toml
生命周期/src/: advance.rs  main.rs
配置文件/: Cargo.toml
配置文件/examples/: main1.rs  main2.rs
错误处理与格式化输出/: Cargo.toml
错误处理与格式化输出/src/: error_handle.rs
