[package]
name = "mytest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
crossbeam-channel = "0.5.8"
crossbeam-utils = "0.8.15"
ouroboros = "0.15.6"

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
libc = "0.2.0"
