[package]
name = "宏编程"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hello_macro = { path = "E:/Doraemon/IT/Rust/study/hello_macro" }
hello_macro_derive = { path = "E:/Doraemon/IT/Rust/study/hello_macro/hello_macro_derive" }
