[package]
name = "并发编程"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
crossbeam-utils = "0.8.15"
thread_local = "1.1.7"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"

[[example]]
name = "example1"
path = "examples"
