[package]
name = "异步编程"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
rand = "0.8.5"
tokio = { version = "0.2", features = ["full"] }
timer_future = { path = "E:/Doraemon/IT/Rust/study/timer_future" }
pin-utils = "0.1.0"
async-trait = "0.1"
