[package]
name = "配置文件"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ini = "1"
config = "0.13"
toml = "0.8"

[[example]]
name = "example1"
path = "examples"
