[package]
name = "tokio_协作式调度"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
rand = "0.8.4"


[[example]]
name = "example1"
path = "examples/example1.rs"
